--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@eslint/js": "^9.21.0",
     "@tanstack/react-router-devtools": "^1.114.27",
     "@tanstack/router-plugin": "^1.114.27",
@@ -23,7 +24,8 @@
   "private": true,
   "scripts": {
     "build": "tsc -b && vite build",
-    "check": "pnpm check:tsc && pnpm build && pnpm check:eslint && echo check success",
+    "check": "pnpm check:tsc && pnpm check:biome && pnpm build && pnpm check:eslint && echo check success",
+    "check:biome": "biome check --error-on-warnings --write --unsafe src && echo check:biome success",
     "check:eslint": "eslint .",
     "check:tsc": "tsc --noEmit && echo check:tsc success",
     "dev": "vite",
