--- a/package.json
+++ b/package.json
@@ -1,32 +1,34 @@
 {
   "dependencies": {
-    "@tanstack/react-router": "^1.114.27",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "@tanstack/react-router": "^1.114",
+    "react": "^19.0",
+    "react-dom": "^19.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@eslint/js": "^9.21.0",
-    "@tanstack/react-router-devtools": "^1.114.27",
-    "@tanstack/router-plugin": "^1.114.27",
-    "@types/react": "^19.0.10",
-    "@types/react-dom": "^19.0.4",
-    "@vitejs/plugin-react-swc": "^3.8.0",
-    "eslint": "^9.21.0",
-    "eslint-plugin-react-hooks": "^5.1.0",
-    "eslint-plugin-react-refresh": "^0.4.19",
-    "globals": "^15.15.0",
-    "typescript": "~5.7.2",
-    "typescript-eslint": "^8.24.1",
-    "vite": "^6.2.0"
+    "@eslint/js": "^9.21",
+    "@tanstack/react-router-devtools": "^1.114",
+    "@tanstack/router-plugin": "^1.114",
+    "@types/react": "^19.0",
+    "@types/react-dom": "^19.0",
+    "@vitejs/plugin-react-swc": "^3.8",
+    "eslint": "^9.21",
+    "eslint-plugin-react-hooks": "^5.1",
+    "eslint-plugin-react-refresh": "^0.4",
+    "globals": "^15.15",
+    "knip": "latest",
+    "typescript": "^5.7",
+    "typescript-eslint": "^8.24",
+    "vite": "^6.2"
   },
   "name": "react-playground",
   "private": true,
   "scripts": {
     "build": "tsc -b && vite build",
-    "check": "pnpm check:tsc && pnpm check:biome && pnpm build && pnpm check:eslint && echo check success",
+    "check": "pnpm i && echo install success && pnpm check:tsc && pnpm check:biome && pnpm check:knip && pnpm build && pnpm check:eslint && echo check success",
     "check:biome": "biome check --error-on-warnings --write --unsafe src && echo check:biome success",
-    "check:eslint": "eslint .",
+    "check:eslint": "eslint . && echo check:eslint success",
+    "check:knip": "knip && echo check:knip success",
     "check:tsc": "tsc --noEmit && echo check:tsc success",
     "dev": "vite",
     "preview": "vite preview"
