--- a/package.json
+++ b/package.json
@@ -1,14 +1,17 @@
 {
   "dependencies": {
+    "@tailwindcss/vite": "^4.0",
     "@tanstack/react-router": "^1.114",
     "react": "^19.0",
-    "react-dom": "^19.0"
+    "react-dom": "^19.0",
+    "tailwindcss": "^4.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@eslint/js": "^9.21",
     "@tanstack/react-router-devtools": "^1.114",
     "@tanstack/router-plugin": "^1.114",
+    "@types/node": "^22.13",
     "@types/react": "^19.0",
     "@types/react-dom": "^19.0",
     "@vitejs/plugin-react-swc": "^3.8",
