--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "dependencies": {
+    "@radix-ui/react-slot": "^1.1",
     "@tailwindcss/vite": "^4.0",
     "@tanstack/react-router": "^1.114",
+    "class-variance-authority": "^0.7",
+    "clsx": "^2.1",
+    "lucide-react": "^0.484",
     "react": "^19.0",
     "react-dom": "^19.0",
-    "tailwindcss": "^4.0"
+    "tailwind-merge": "^3.0",
+    "tailwindcss": "^4.0",
+    "tw-animate-css": "^1.2"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
