--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
+    "@hookform/resolvers": "^4.1",
+    "@radix-ui/react-label": "^2.1",
     "@radix-ui/react-slot": "^1.1",
     "@tailwindcss/vite": "^4.0",
     "@tanstack/react-router": "^1.114",
@@ -8,9 +10,11 @@
     "lucide-react": "^0.484",
     "react": "^19.0",
     "react-dom": "^19.0",
+    "react-hook-form": "^7.54",
     "tailwind-merge": "^3.0",
     "tailwindcss": "^4.0",
-    "tw-animate-css": "^1.2"
+    "tw-animate-css": "^1.2",
+    "zod": "^3.24"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
