--- a/package.json
+++ b/package.json
@@ -18,33 +18,54 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
+    "@chromatic-com/storybook": "3",
     "@eslint/js": "^9.21",
+    "@storybook/addon-essentials": "8.6.11",
+    "@storybook/addon-onboarding": "8.6.11",
+    "@storybook/blocks": "8.6.11",
+    "@storybook/experimental-addon-test": "8.6.11",
+    "@storybook/react": "8.6.11",
+    "@storybook/react-vite": "8.6.11",
+    "@storybook/test": "8.6.11",
     "@tanstack/react-router-devtools": "^1.114",
     "@tanstack/router-plugin": "^1.114",
     "@types/node": "^22.13",
     "@types/react": "^19.0",
     "@types/react-dom": "^19.0",
     "@vitejs/plugin-react-swc": "^3.8",
+    "@vitest/browser": "^3.0",
+    "@vitest/coverage-v8": "^3.0",
     "eslint": "^9.21",
     "eslint-plugin-react-hooks": "^5.1",
     "eslint-plugin-react-refresh": "^0.4",
+    "eslint-plugin-storybook": "^0.12",
     "globals": "^16.0",
     "knip": "latest",
+    "playwright": "^1.51",
+    "storybook": "8.6.11",
     "typescript": "^5.7",
     "typescript-eslint": "^8.24",
-    "vite": "^6.2"
+    "vite": "^6.2",
+    "vitest": "^3.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   },
   "name": "react-playground",
   "private": true,
   "scripts": {
     "build": "tsc -b && vite build",
+    "build:sb": "storybook build",
     "check": "pnpm i && echo install success && pnpm check:tsc && pnpm check:biome && pnpm check:knip && pnpm build && pnpm check:eslint && echo check success",
     "check:biome": "biome check --error-on-warnings --write --unsafe src && echo check:biome success",
     "check:eslint": "eslint . && echo check:eslint success",
     "check:knip": "knip && echo check:knip success",
     "check:tsc": "tsc --noEmit && echo check:tsc success",
     "dev": "vite",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sb": "storybook dev -p 6006"
   },
   "type": "module",
   "version": "0.0.0"
