--- a/biome.json
+++ b/biome.json
@@ -2,6 +2,7 @@
 	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
 	"files": {
 		"ignore": [
+			"coverage/**/*",
 			"src/routeTree.gen.ts"
 		],
 		"ignoreUnknown": false
