--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "@tanstack/react-router": "^1.114",
     "class-variance-authority": "^0.7",
     "clsx": "^2.1",
+    "es-toolkit": "^1.34",
     "lucide-react": "^0.484",
+    "next-themes": "^0.4",
     "react": "^19.0",
     "react-dom": "^19.0",
     "react-hook-form": "^7.54",
+    "sonner": "^2.0",
     "tailwind-merge": "^3.0",
     "tailwindcss": "^4.0",
     "tw-animate-css": "^1.2",
-    "zod": "^3.24"
+    "zod": "^3.24",
+    "zustand": "^5.0"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
