feat: rename project to Vet Web and update related assets

--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
       "plugin:storybook/recommended"
     ]
   },
-  "name": "react-playground",
+  "name": "vet-web",
   "private": true,
   "scripts": {
     "build": "tsc -b && vite build",
