feat: update color scheme to use primary color for consistency across components

--- a/components.json
+++ b/components.json
@@ -14,7 +14,7 @@
     "baseColor": "neutral",
     "config": "",
     "css": "src/index.css",
-    "cssVariables": false,
+    "cssVariables": true,
     "prefix": ""
   },
   "tsx": true
