--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "@hookform/resolvers": "^4.1",
     "@radix-ui/react-label": "^2.1",
     "@radix-ui/react-radio-group": "^1.2",
+    "@radix-ui/react-select": "^2.1",
     "@radix-ui/react-slot": "^1.1",
     "@tailwindcss/vite": "^4.0",
     "@tanstack/react-router": "^1.114",
