--- a/package.json
+++ b/package.json
@@ -1,32 +1,35 @@
 {
   "dependencies": {
-    "@hookform/resolvers": "^5.0.0",
-    "@radix-ui/react-label": "^2.1",
-    "@radix-ui/react-radio-group": "^1.2",
-    "@radix-ui/react-select": "^2.1",
-    "@radix-ui/react-slot": "^1.1",
-    "@tailwindcss/vite": "^4.0",
-    "@tanstack/react-router": "^1.114",
-    "class-variance-authority": "^0.7",
-    "clsx": "^2.1",
-    "es-toolkit": "^1.34",
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-dialog": "^1.1.13",
+    "@radix-ui/react-label": "^2.1.6",
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-radio-group": "^1.3.6",
+    "@radix-ui/react-select": "^2.2.4",
+    "@radix-ui/react-slot": "^1.2.2",
+    "@tailwindcss/vite": "^4.1.6",
+    "@tanstack/react-router": "^1.120.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "cmdk": "^1.1.1",
+    "es-toolkit": "^1.37.2",
     "lucide-react": "^0.510.0",
-    "next-themes": "^0.4",
-    "react": "^19.0",
-    "react-dom": "^19.0",
-    "react-hook-form": "^7.54",
-    "sonner": "^2.0",
-    "tailwind-merge": "^3.0",
-    "tailwindcss": "^4.0",
-    "tw-animate-css": "^1.2",
-    "zod": "^3.24",
-    "zustand": "^5.0"
+    "next-themes": "^0.4.6",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4.1.6",
+    "tw-animate-css": "^1.2.9",
+    "zod": "^3.24.4",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@chromatic-com/storybook": "3",
-    "@eslint/js": "^9.21",
-    "@storybook/addon-coverage": "^1.0",
+    "@chromatic-com/storybook": "^3.2.6",
+    "@eslint/js": "^9.26.0",
+    "@storybook/addon-coverage": "^1.0.5",
     "@storybook/addon-essentials": "8.6.12",
     "@storybook/addon-onboarding": "8.6.12",
     "@storybook/blocks": "8.6.12",
@@ -34,28 +37,28 @@
     "@storybook/react": "8.6.12",
     "@storybook/react-vite": "8.6.12",
     "@storybook/test": "8.6.12",
-    "@storybook/test-runner": "^0.22",
-    "@tanstack/react-router-devtools": "^1.114",
-    "@tanstack/router-plugin": "^1.114",
-    "@types/node": "^22.13",
-    "@types/react": "^19.0",
-    "@types/react-dom": "^19.0",
-    "@vitejs/plugin-react-swc": "^3.8",
-    "@vitest/browser": "^3.0",
-    "@vitest/coverage-v8": "^3.0",
-    "eslint": "^9.21",
-    "eslint-plugin-react-hooks": "^5.1",
-    "eslint-plugin-react-refresh": "^0.4",
-    "eslint-plugin-storybook": "^0.12",
-    "globals": "^16.0",
-    "knip": "latest",
-    "playwright": "^1.51",
-    "resultx": "^2.0",
+    "@storybook/test-runner": "^0.22.0",
+    "@tanstack/react-router-devtools": "^1.120.3",
+    "@tanstack/router-plugin": "^1.120.3",
+    "@types/node": "^22.15.18",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.5",
+    "@vitejs/plugin-react-swc": "^3.9.0",
+    "@vitest/browser": "^3.1.3",
+    "@vitest/coverage-v8": "^3.1.3",
+    "eslint": "^9.26.0",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "eslint-plugin-storybook": "^0.12.0",
+    "globals": "^16.1.0",
+    "knip": "^5.56.0",
+    "playwright": "^1.52.0",
+    "resultx": "^2.0.2",
     "storybook": "8.6.12",
-    "typescript": "^5.7",
-    "typescript-eslint": "^8.24",
-    "vite": "^6.2",
-    "vitest": "^3.0"
+    "typescript": "^5.8.3",
+    "typescript-eslint": "^8.32.1",
+    "vite": "^6.3.5",
+    "vitest": "^3.1.3"
   },
   "eslintConfig": {
     "extends": [
@@ -82,5 +85,14 @@
     "test:watch": "vitest --coverage"
   },
   "type": "module",
-  "version": "0.0.0"
+  "version": "0.0.0",
+  "pnpm": {
+    "onlyBuiltDependencies": [
+      "@biomejs/biome",
+      "@swc/core",
+      "@tailwindcss/oxide",
+      "esbuild",
+      "msw"
+    ]
+  }
 }
