--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@storybook/test-runner": "^0.22.0",
     "@tanstack/react-router-devtools": "^1.120.3",
     "@tanstack/router-plugin": "^1.120.3",
+    "@testing-library/react": "^16.3.0",
     "@types/node": "^22.15.18",
     "@types/react": "^19.1.4",
     "@types/react-dom": "^19.1.5",
@@ -51,6 +52,7 @@
     "eslint-plugin-react-refresh": "^0.4.20",
     "eslint-plugin-storybook": "^0.12.0",
     "globals": "^16.1.0",
+    "happy-dom": "^17.4.7",
     "knip": "^5.56.0",
     "playwright": "^1.52.0",
     "resultx": "^2.0.2",
