chore: move shadcn components to ui folder

--- a/components.json
+++ b/components.json
@@ -4,7 +4,7 @@
     "components": "@/components",
     "hooks": "@/hooks",
     "lib": "@/utils",
-    "ui": "@/components/atoms",
+    "ui": "@/components/ui",
     "utils": "@/utils"
   },
   "iconLibrary": "lucide",
