--- a/components.json
+++ b/components.json
@@ -9,7 +9,7 @@
   },
   "iconLibrary": "lucide",
   "rsc": false,
-  "style": "new-york",
+  "style": "default",
   "tailwind": {
     "baseColor": "neutral",
     "config": "",
