--- a/package.json
+++ b/package.json
@@ -28,17 +28,13 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@chromatic-com/storybook": "^4.0.0",
+    "@chromatic-com/storybook": "^4.0.0-next.16",
     "@eslint/js": "^9.26.0",
     "@storybook/addon-coverage": "^1.0.5",
-    "@storybook/addon-essentials": "8.6.14",
-    "@storybook/addon-onboarding": "8.6.14",
-    "@storybook/blocks": "8.6.14",
-    "@storybook/experimental-addon-test": "8.6.14",
-    "@storybook/react": "8.6.14",
-    "@storybook/react-vite": "8.6.14",
-    "@storybook/test": "8.6.14",
-    "@storybook/test-runner": "^0.22.0",
+    "@storybook/addon-onboarding": "9.1.0-alpha.2",
+    "@storybook/addon-vitest": "9.1.0-alpha.2",
+    "@storybook/react-vite": "9.1.0-alpha.2",
+    "@storybook/test-runner": "^0.23.0-next.3",
     "@tanstack/react-router-devtools": "^1.120.3",
     "@tanstack/router-plugin": "^1.120.3",
     "@testing-library/react": "^16.3.0",
@@ -51,13 +47,13 @@
     "eslint": "^9.26.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^0.12.0",
+    "eslint-plugin-storybook": "^9.1.0-alpha.2",
     "globals": "^16.1.0",
     "happy-dom": "^17.4.7",
     "knip": "^5.56.0",
     "playwright": "^1.52.0",
     "resultx": "^2.0.2",
-    "storybook": "8.6.14",
+    "storybook": "9.1.0-alpha.2",
     "typescript": "^5.8.3",
     "typescript-eslint": "^8.32.1",
     "vite": "^6.3.5",
