--- a/package.json
+++ b/package.json
@@ -1,63 +1,63 @@
 {
   "dependencies": {
     "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-dialog": "^1.1.13",
-    "@radix-ui/react-label": "^2.1.6",
-    "@radix-ui/react-popover": "^1.1.13",
-    "@radix-ui/react-radio-group": "^1.3.6",
-    "@radix-ui/react-select": "^2.2.4",
-    "@radix-ui/react-slot": "^1.2.2",
-    "@tailwindcss/vite": "^4.1.7",
-    "@tanstack/react-router": "^1.120.3",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tailwindcss/vite": "^4.1.8",
+    "@tanstack/react-router": "^1.120.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "es-toolkit": "^1.37.2",
+    "es-toolkit": "^1.38.0",
     "lucide-react": "^0.511.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.3",
+    "react-hook-form": "^7.57.0",
     "shuutils": "^10.6.0",
-    "sonner": "^2.0.3",
+    "sonner": "^2.0.4",
     "tailwind-merge": "^3.3.0",
-    "tailwindcss": "^4.1.7",
-    "tw-animate-css": "^1.2.9",
-    "zod": "^3.25.32",
-    "zustand": "^5.0.4"
+    "tailwindcss": "^4.1.8",
+    "tw-animate-css": "^1.3.3",
+    "zod": "^3.25.47",
+    "zustand": "^5.0.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
     "@chromatic-com/storybook": "^4.0.0-next.16",
-    "@eslint/js": "^9.26.0",
+    "@eslint/js": "^9.28.0",
     "@storybook/addon-coverage": "^1.0.5",
     "@storybook/addon-onboarding": "9.1.0-alpha.2",
     "@storybook/addon-vitest": "9.1.0-alpha.2",
     "@storybook/react-vite": "9.1.0-alpha.2",
-    "@storybook/test-runner": "^0.23.0-next.3",
-    "@tanstack/react-router-devtools": "^1.120.3",
-    "@tanstack/router-plugin": "^1.120.3",
+    "@storybook/test-runner": "0.23.0-next.3",
+    "@tanstack/react-router-devtools": "^1.120.13",
+    "@tanstack/router-plugin": "^1.120.13",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.15.18",
-    "@types/react": "^19.1.4",
+    "@types/node": "^22.15.29",
+    "@types/react": "^19.1.6",
     "@types/react-dom": "^19.1.5",
-    "@vitejs/plugin-react-swc": "^3.9.0",
-    "@vitest/browser": "^3.1.3",
-    "@vitest/coverage-v8": "^3.1.3",
-    "eslint": "^9.26.0",
+    "@vitejs/plugin-react-swc": "^3.10.0",
+    "@vitest/browser": "^3.1.4",
+    "@vitest/coverage-v8": "^3.1.4",
+    "eslint": "^9.28.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
-    "eslint-plugin-storybook": "^9.1.0-alpha.2",
-    "globals": "^16.1.0",
-    "happy-dom": "^17.4.7",
-    "knip": "^5.56.0",
+    "eslint-plugin-storybook": "9.1.0-alpha.2",
+    "globals": "^16.2.0",
+    "happy-dom": "^17.5.6",
+    "knip": "^5.59.1",
     "playwright": "^1.52.0",
     "resultx": "^2.0.2",
     "storybook": "9.1.0-alpha.2",
     "typescript": "^5.8.3",
-    "typescript-eslint": "^8.32.1",
+    "typescript-eslint": "^8.33.0",
     "vite": "^6.3.5",
-    "vitest": "^3.1.3"
+    "vitest": "^3.1.4"
   },
   "eslintConfig": {
     "extends": [
