--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -45,7 +45,8 @@
         "import/no-namespace": "off",
         "max-nested-callbacks": "off",
         "no-magic-numbers": "off",
-        "sort-keys": "off"
+        "sort-keys": "off",
+        "unicorn/numeric-separators-style": "off"
       }
     },
     {
