--- a/biome.json
+++ b/biome.json
@@ -3,6 +3,7 @@
 	"files": {
 		"ignore": [
 			"coverage/**/*",
+			"src/components/ui/**/*",
 			"src/routeTree.gen.ts"
 		],
 		"ignoreUnknown": false
