--- a/package.json
+++ b/package.json
@@ -9,11 +9,11 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.8",
-    "@tanstack/react-router": "^1.120.15",
+    "@tanstack/react-router": "^1.121.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "es-toolkit": "^1.38.0",
+    "es-toolkit": "^1.39.3",
     "lucide-react": "^0.514.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
@@ -21,7 +21,7 @@
     "react-hook-form": "^7.57.0",
     "shuutils": "^10.6.0",
     "sonner": "^2.0.5",
-    "tailwind-merge": "^3.3.0",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.8",
     "tw-animate-css": "^1.3.4",
     "zod": "^3.25.61",
@@ -34,26 +34,26 @@
     "@storybook/addon-onboarding": "9.1.0-alpha.5",
     "@storybook/addon-vitest": "9.1.0-alpha.5",
     "@storybook/react-vite": "9.1.0-alpha.5",
-    "@storybook/test-runner": "0.23.0-next.4",
-    "@tanstack/react-router-devtools": "^1.120.15",
-    "@tanstack/router-plugin": "^1.120.15",
+    "@storybook/test-runner": "0.23.0",
+    "@tanstack/react-router-devtools": "^1.121.0",
+    "@tanstack/router-plugin": "^1.121.0",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^22.15.29",
-    "@types/react": "^19.1.6",
+    "@types/node": "^24.0.0",
+    "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.10.1",
-    "@vitest/browser": "^3.2.1",
-    "@vitest/coverage-v8": "^3.2.1",
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/browser": "^3.2.3",
+    "@vitest/coverage-v8": "^3.2.3",
     "globals": "^16.2.0",
-    "happy-dom": "^18.0.0",
-    "knip": "^5.60.0",
+    "happy-dom": "^18.0.1",
+    "knip": "^5.60.2",
     "oxlint": "^1.0.0",
-    "playwright": "^1.52.0",
+    "playwright": "^1.53.0",
     "resultx": "^2.0.2",
     "storybook": "9.1.0-alpha.5",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^3.2.1"
+    "vitest": "^3.2.3"
   },
   "name": "vet-web",
   "pnpm": {
