fix: complete file upload component features & implementation in form

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -10,6 +10,7 @@
     "suspicious": "warn"
   },
   "globals": {
+    "File": "readonly",
     "clearInterval": "readonly",
     "console": "readonly",
     "document": "readonly",
