test: improve coverage

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -11,6 +11,7 @@
   },
   "globals": {
     "File": "readonly",
+    "__dirname": "readonly",
     "clearInterval": "readonly",
     "console": "readonly",
     "document": "readonly",
