chore: migrate to biome 2

--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -15,6 +15,8 @@
     "clearInterval": "readonly",
     "console": "readonly",
     "document": "readonly",
+    "localStorage": "readonly",
+    "setInterval": "readonly",
     "setTimeout": "readonly",
     "structuredClone": "readonly"
   },
@@ -109,6 +111,7 @@
     ],
     "eslint/no-undefined": "off",
     "eslint/yoda": "off",
+    "extensions": "off",
     "func-style": [
       "error",
       "declaration",
