--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "$schema": "https://json.schemastore.org/package",
+  "author": "Romain Racamier-Lafon <romain.racamier@gmail.com>",
+  "bugs": "https://github.com/Shuunen/vet-web/issues",
   "dependencies": {
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -9,7 +12,7 @@
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/react-router": "^1.121.2",
+    "@tanstack/react-router": "^1.121.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
@@ -18,43 +21,56 @@
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.57.0",
+    "react-hook-form": "^7.58.1",
     "shuutils": "^10.6.0",
     "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.10",
     "tw-animate-css": "^1.3.4",
-    "zod": "^3.25.64",
+    "zod": "^3.25.67",
     "zustand": "^5.0.5"
   },
+  "description": "Vet Web is a web application for managing veterinary practices",
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
-    "@chromatic-com/storybook": "^4.0.0",
+    "@biomejs/biome": "^2.0.0",
+    "@chromatic-com/storybook": "^4.0.1",
     "@storybook/addon-coverage": "^2.0.0",
     "@storybook/addon-onboarding": "9.1.0-alpha.6",
     "@storybook/addon-vitest": "9.1.0-alpha.6",
     "@storybook/react-vite": "9.1.0-alpha.6",
     "@storybook/test-runner": "0.23.0",
-    "@tanstack/react-router-devtools": "^1.121.8",
-    "@tanstack/router-plugin": "^1.121.9",
+    "@tanstack/react-router-devtools": "^1.121.27",
+    "@tanstack/router-plugin": "^1.121.27",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^24.0.1",
+    "@types/node": "^24.0.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react-swc": "^3.10.2",
-    "@vitest/browser": "^3.2.3",
-    "@vitest/coverage-v8": "^3.2.3",
+    "@vitest/browser": "^3.2.4",
+    "@vitest/coverage-v8": "^3.2.4",
     "globals": "^16.2.0",
     "happy-dom": "^18.0.1",
-    "knip": "^5.61.0",
-    "oxlint": "^1.1.0",
-    "playwright": "^1.53.0",
+    "knip": "^5.61.2",
+    "oxlint": "^1.2.0",
+    "playwright": "^1.53.1",
+    "repo-check": "^1.46.0",
     "resultx": "^2.0.2",
     "storybook": "9.1.0-alpha.6",
     "typescript": "^5.8.3",
     "vite": "^6.3.5",
-    "vitest": "^3.2.3"
+    "vitest": "^3.2.4"
   },
+  "files": [
+    "src"
+  ],
+  "homepage": "https://github.com/Shuunen/vet-web",
+  "keywords": [
+    "veterinary",
+    "web",
+    "application",
+    "management"
+  ],
+  "license": "MIT",
   "name": "vet-web",
   "pnpm": {
     "onlyBuiltDependencies": [
@@ -66,15 +82,23 @@
     ]
   },
   "private": true,
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Shuunen/vet-web.git"
+  },
   "scripts": {
-    "build": "tsc -b && vite build",
-    "build:sb": "storybook build",
+    "build": "tsc -b && vite build && echo build success",
+    "build:mark": "unique-mark dist/index.{html} && echo build:mark success",
+    "build:sb": "storybook build && echo build:sb success",
     "check": "pnpm i && echo install success && pnpm check:tsc && pnpm check:biome && pnpm check:oxlint && pnpm check:knip && pnpm build && pnpm run test && echo check success",
     "check:biome": "biome check --error-on-warnings --write --unsafe src && echo check:biome success",
-    "check:oxlint": "oxlint src --deny-warnings --fix --fix-suggestions --fix-dangerously && echo check:oxlint success",
     "check:knip": "knip && echo check:knip success",
+    "check:oxlint": "oxlint src --deny-warnings --fix --fix-suggestions --fix-dangerously && echo check:oxlint success",
+    "check:repo": "repo-check && echo check:repo success",
     "check:tsc": "tsc --noEmit --project tsconfig.app.json --incremental && echo check:tsc success",
     "dev": "vite",
+    "postversion": "git push && git push --tags",
+    "preversion": "pnpm check",
     "preview": "vite preview",
     "sb": "storybook dev -p 6006",
     "shad:update": "for file in src/components/ui/*.tsx; do pnpm dlx shadcn@latest add -y -o $(basename \"$file\" .tsx); done",
