--- a/renovate.json
+++ b/renovate.json
@@ -2,8 +2,7 @@
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "dependencyDashboard": false,
   "extends": [
-    "config:recommended",
-    ":automergeAll",
-    ":preserveSemverRanges"
+    "config:semverAllMonthly",
+    ":automergeAll"
   ]
 }
