--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -90,6 +90,8 @@
   ],
   "rules": {
     "@typescript-eslint/array-type": "off",
+    "prefer-default-export": "off",
+    "explicit-module-boundary-types": "off",
     "@typescript-eslint/consistent-indexed-object-style": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "consistent-type-definitions": [
