--- a/package.json
+++ b/package.json
@@ -3,61 +3,61 @@
   "author": "Romain Racamier-Lafon <romain.racamier@gmail.com>",
   "bugs": "https://github.com/Shuunen/vet-web/issues",
   "dependencies": {
-    "@hookform/resolvers": "^5.1.1",
-    "@radix-ui/react-dialog": "^1.1.14",
+    "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-progress": "^1.1.7",
-    "@radix-ui/react-radio-group": "^1.3.7",
-    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-radio-group": "^1.3.8",
+    "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-slot": "^1.2.3",
-    "@tailwindcss/vite": "^4.1.10",
-    "@tanstack/react-router": "^1.121.27",
+    "@tailwindcss/vite": "^4.1.12",
+    "@tanstack/react-router": "^1.131.27",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "es-toolkit": "^1.39.3",
-    "lucide-react": "^0.525.0",
+    "es-toolkit": "^1.39.10",
+    "lucide-react": "^0.540.0",
     "next-themes": "^0.4.6",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.58.1",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "react-hook-form": "^7.62.0",
     "shuutils": "^10.6.0",
-    "sonner": "^2.0.5",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10",
-    "tw-animate-css": "^1.3.4",
-    "zod": "^3.25.67",
-    "zustand": "^5.0.5"
+    "tailwindcss": "^4.1.12",
+    "tw-animate-css": "^1.3.7",
+    "zod": "^4.0.17",
+    "zustand": "^5.0.7"
   },
   "description": "Vet Web is a web application for managing veterinary practices",
   "devDependencies": {
-    "@biomejs/biome": "^2.0.0",
-    "@chromatic-com/storybook": "^4.0.1",
+    "@biomejs/biome": "^2.2.0",
+    "@chromatic-com/storybook": "^4.1.0",
     "@storybook/addon-coverage": "^2.0.0",
-    "@storybook/addon-onboarding": "9.1.0-alpha.6",
-    "@storybook/addon-vitest": "9.1.0-alpha.6",
-    "@storybook/react-vite": "9.1.0-alpha.6",
+    "@storybook/addon-onboarding": "9.1.2",
+    "@storybook/addon-vitest": "9.1.2",
+    "@storybook/react-vite": "9.1.2",
     "@storybook/test-runner": "0.23.0",
-    "@tanstack/react-router-devtools": "^1.121.27",
-    "@tanstack/router-plugin": "^1.121.27",
+    "@tanstack/react-router-devtools": "^1.131.27",
+    "@tanstack/router-plugin": "^1.131.27",
     "@testing-library/react": "^16.3.0",
-    "@types/node": "^24.0.3",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react-swc": "^3.10.2",
+    "@types/node": "^24.3.0",
+    "@types/react": "^19.1.10",
+    "@types/react-dom": "^19.1.7",
+    "@vitejs/plugin-react-swc": "^4.0.1",
     "@vitest/browser": "^3.2.4",
     "@vitest/coverage-v8": "^3.2.4",
-    "globals": "^16.2.0",
+    "globals": "^16.3.0",
     "happy-dom": "^18.0.1",
-    "knip": "^5.61.2",
-    "oxlint": "^1.2.0",
-    "playwright": "^1.53.1",
+    "knip": "^5.62.0",
+    "oxlint": "^1.12.0",
+    "playwright": "^1.54.2",
     "repo-check": "^1.46.0",
     "resultx": "^2.0.2",
-    "storybook": "9.1.0-alpha.6",
-    "typescript": "^5.8.3",
-    "vite": "^7.0.0",
+    "storybook": "9.1.2",
+    "typescript": "^5.9.2",
+    "vite": "^7.1.3",
     "vitest": "^3.2.4"
   },
   "files": [
@@ -78,7 +78,8 @@
       "@swc/core",
       "@tailwindcss/oxide",
       "esbuild",
-      "msw"
+      "msw",
+      "oxc-resolver"
     ]
   },
   "private": true,
