--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "bugs": "https://github.com/Shuunen/vet-web/issues",
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-checkbox": "^1.3.3",
     "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.15",
