--- a/.oxlintrc.json
+++ b/.oxlintrc.json
@@ -10,11 +10,11 @@
     "suspicious": "warn"
   },
   "globals": {
-    "File": "readonly",
     "__dirname": "readonly",
     "clearInterval": "readonly",
     "console": "readonly",
     "document": "readonly",
+    "File": "readonly",
     "localStorage": "readonly",
     "setInterval": "readonly",
     "setTimeout": "readonly",
@@ -90,8 +90,6 @@
   ],
   "rules": {
     "@typescript-eslint/array-type": "off",
-    "prefer-default-export": "off",
-    "explicit-module-boundary-types": "off",
     "@typescript-eslint/consistent-indexed-object-style": "off",
     "@typescript-eslint/explicit-function-return-type": "off",
     "consistent-type-definitions": [
@@ -113,6 +111,7 @@
     ],
     "eslint/no-undefined": "off",
     "eslint/yoda": "off",
+    "explicit-module-boundary-types": "off",
     "extensions": "off",
     "func-style": [
       "error",
@@ -151,10 +150,12 @@
         "ignoreDefaultValues": true
       }
     ],
+    "no-named-export": "off",
     "no-rest-spread-properties": "off",
     "no-ternary": "off",
     "no-void": "off",
     "oxc/no-optional-chaining": "off",
+    "prefer-default-export": "off",
     "sort-imports": "off",
     "unicorn/filename-case": [
       "error",
